[gd_scene load_steps=8 format=3 uid="uid://2i7svhfvkx0q"]

[ext_resource type="Script" uid="uid://cr2xeqiyary4m" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://bnl24mkh7vic3" path="res://scenes/snake_segment.tscn" id="2_jyhfs"]
[ext_resource type="Texture2D" uid="uid://cj0xvfngqduxs" path="res://assets/bg.png" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://df7qwhlqokkrs" path="res://scenes/apple.tscn" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://ckl2tdj8mut0o" path="res://scenes/hud.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://blx1ighgeifbe" path="res://scenes/menu_layer.tscn" id="6_o6xl0"]
[ext_resource type="PackedScene" uid="uid://ygog6uf2qls2" path="res://scenes/game_over_menu.tscn" id="6_tefeu"]

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")
snake_scene = ExtResource("2_jyhfs")
apple_scene = ExtResource("3_o6xl0")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 550)
texture = ExtResource("2_sugp2")

[node name="Hud" parent="." instance=ExtResource("3_sugp2")]

[node name="MenuLayer" parent="." instance=ExtResource("6_o6xl0")]
process_mode = 2

[node name="GameOverMenu" parent="." instance=ExtResource("6_tefeu")]
process_mode = 2

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="open_menu" from="Hud" to="." method="_on_hud_open_menu"]
[connection signal="menu_exit" from="MenuLayer" to="." method="_on_menu_layer_menu_exit"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
